--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,27 @@
+@import "./styles/imports";
+@import "./styles/components/wrapper.scss";
+@import "./styles/components/header.scss";
+@import "./styles/components/button.scss";
+
+@import "./styles/components/animations/campfire.scss";
+
+// globals
+h1 {
+  @include font($size: 75px);
+}
+
+h2 {
+  @include font($size: 60px);
+}
+
+h1, h2, h3, h4 {
+  @include font($tracking: 0.8px, $family: $heading);
+}
+
+h5, h6, p, ul, li {
+  @include font($family: $body);
+}
+
 .App {
   text-align: center;
 }
