--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,6 +18,9 @@ $fireBright: #ff7800;
 $fireMedium: #f36200;
 $fireDark: #d63603;
 
+$wood: #781e20;
+$light-wood: #b35050;
+
 // font families
 $heading: "Montserrat", sans-serif;
 $body: "UniversLT57CondensedRegular", sans-serif;
