--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import "./styles/components/wrapper.scss";
 @import "./styles/components/header.scss";
 @import "./styles/components/button.scss";
+@import "./styles/components/navigation.scss";
 
 @import "./styles/components/animations/campfire.scss";
 
