--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,5 +1,5 @@
 // fonts
-@mixin font($size: null, $color: null, $weight: null, $leading: null, $tracking: null, $family: null, $align: null) {
+@mixin font($size: null, $color: null, $weight: null, $leading: null, $tracking: null, $family: null, $align: null, $decoration: null) {
     font-size: $size;
     color: $color;
     font-weight: $weight;
@@ -7,6 +7,7 @@
     letter-spacing: $tracking;
     font-family: $family;
     text-align: $align;
+    text-decoration: $decoration;
 }
 
 // div sizing
