--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -4,8 +4,16 @@
     &_main {
         &__hero {
             @include font($color: $fireBright, $weight: 800, $align: left);
-            width: calc(100vw - 50%);
+            width: calc(100vw - 60%);
             margin-left: 12vw;
+
+            h1 {
+                margin-bottom: 0;
+            }
+
+            .buttons > .link_button:not(:first-child) {
+                padding-left: 1rem;
+            }
         }
     }
 }
