--- a/src/styles/components/linkButton.scss
+++ b/src/styles/components/linkButton.scss
@@ -4,13 +4,38 @@
     @include flex($direction: row);
 
     a {
-        @include font($color: $moonSilver, $size: 24px, $weight: 300);
-        text-underline-offset: 0.5rem;
-        text-decoration-color: $peru;
+        @include flex($direction: center);
+        @include font($color: $moonSilver, $size: 24px, $weight: 300, $decoration: none);
+
+        &:before {
+            @include width-height($width: 110px, $height: 2px);
+            @include transition;
+            position: absolute;
+            opacity: 0;
+            margin-top: 2.8rem;
+            margin-left: 5px;
+            content: "";
+            background-color: $peru;
+            }
+
+        &:hover {
+            i {
+                @include transition;
+                @include transform(scale(1.2));
+            }
+
+            &:before {
+                @include transition;
+                opacity: 1;
+            }
+        }
+
     }
 
     i {
-        @include font($color: $peru, $size: 24px);
+        @include font($color: $moonSilver);
+        @include transition;
+        @include transform(scale(1));
         padding: 0 0.5rem;
     }
 }
