--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -23,12 +23,14 @@
 // flexbox classes
 @mixin flex($direction: null, $wrap: null) {
     display: flex;
-    flex-direction: $direction;
     flex-wrap: $wrap;
 
     @if $direction == center {
         align-items: center;
         justify-items: center;
+    }
+    @else {
+        flex-direction: $direction;
     }
 }
 
@@ -75,3 +77,16 @@
     -ms-transform: $property;
     transform: $property;
 }
+
+// shadows
+@mixin box-shadow($top: 0, $left: 0px, $blur: 12px, $color: rgba(0, 0, 0, 0.4), $inset: false) {
+    @if $inset {
+      -webkit-box-shadow:inset $top $left $blur $color;
+      -moz-box-shadow:inset $top $left $blur $color;
+      box-shadow:inset $top $left $blur $color;
+    } @else {
+      -webkit-box-shadow: $top $left $blur $color;
+      -moz-box-shadow: $top $left $blur $color;
+      box-shadow: $top $left $blur $color;
+    }
+  }
