--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,6 +18,7 @@ $nightBlue: #031e25;
 $fireBright: #ff7800;
 $fireMedium: #f36200;
 $fireDark: #d63603;
+$log: linear-gradient(#e66465, #5d5e55);
 
 $wood: #781e20;
 $light-wood: #b35050;
