--- a/src/styles/components/animations/campfire.scss
+++ b/src/styles/components/animations/campfire.scss
@@ -1,173 +1,232 @@
-  
-  @keyframes scaleUpDown {
-    0%,
-    100% {
-      transform: scaleY(1) scaleX(1);
-    }
-    50%,
-    90% {
-      transform: scaleY(1.1);
-    }
-    75% {
-      transform: scaleY(0.95);
-    }
-    80% {
-      transform: scaleX(0.95);
-    }
+@import "../../imports";
+
+@keyframes scaleUpDown {
+  0%,
+  100% {
+    transform: scaleY(1) scaleX(1);
   }
-  
-  @keyframes shake {
-    0%,
-    100% {
-      transform: skewX(0) scale(1);
-    }
-    50% {
-      transform: skewX(5deg) scale(0.9);
-    }
+  50%,
+  90% {
+    transform: scaleY(1.1);
   }
-  
-  @keyframes particleUp {
-    0% {
-      opacity: 0;
-    }
-    20% {
-      opacity: 1;
-    }
-    80% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      top: -100%;
-      transform: scale(0.5);
-    }
+  75% {
+    transform: scaleY(0.95);
   }
-  
-  @keyframes glow {
-    0%,
-    100% {
-      background-color: #ef5a00;
-    }
-    50% {
-      background-color: #ff7800;
-    }
+  80% {
+    transform: scaleX(0.95);
   }
-  
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: skewX(0) scale(1);
+  }
+  50% {
+    transform: skewX(5deg) scale(0.9);
+  }
+}
+
+@keyframes particleUp {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    top: -100%;
+    transform: scale(0.5);
+  }
+}
+
+@keyframes glow {
+  0%,
+  100% {
+    background-color: #ef5a00;
+  }
+  50% {
+    background-color: #ff7800;
+  }
+}
+.campfire {
   .fire {
     @include width-height($width: 10vw, $height: 10vw);
     position: absolute;
     top: calc(100vh - 45%);
-    left: calc(100vw - 25%);
+    left: calc(100vw - 24.5%);
     background-color: transparent;
     margin-left: auto;
     margin-right: auto;
-  }
+    z-index: 2;
+
+    .main {
+      @include width-height($width: 100%, $height: 100%);
+      position: absolute;
+      animation: scaleUpDown 3s ease-out;
+      animation-iteration-count: infinite;
+      animation-fill-mode: both;
+    }
   
-  .fire-main {
-    @include width-height($width: 100%, $height: 100%);
-    position: absolute;
-    animation: scaleUpDown 3s ease-out;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
-  }
+    .main .main_fire {
+      @include width-height($width: 100%, $height: 100%);
+      position: absolute;
+      background-image: radial-gradient(
+        farthest-corner at 10px 0,
+        #d43300 0%,
+        #ef5a00 95%
+      );
+      transform: scaleX(0.8) rotate(45deg);
+      border-radius: 0 40% 60% 40%;
+      filter: drop-shadow(0 0 10px #d43322);
+    }
   
-  .fire-main .main-fire {
-    @include width-height($width: 100%, $height: 100%);
-    position: absolute;
-    background-image: radial-gradient(farthest-corner at 10px 0, #d43300 0%, #ef5a00 95%);
-    transform: scaleX(0.8) rotate(45deg);
-    border-radius: 0 40% 60% 40%;
-    filter: drop-shadow(0 0 10px #d43322);
-  }
+    .main .particle_fire {
+      @include width-height($width: 10px, $height: 10px);
+      position: absolute;
+      top: 60%;
+      left: 45%;
+      background-color: #ef5a00;
+      border-radius: 50%;
+      filter: drop-shadow(0 0 10px #d43322);
+      animation: particleUp 2s ease-out 0;
+      animation-iteration-count: infinite;
+      animation-fill-mode: both;
+    }
   
-  .fire-main .particle-fire {
-    @include width-height($width: 10px, $height: 10px);
-    position: absolute;
-    top: 60%;
-    left: 45%;
-    background-color: #ef5a00;
-    border-radius: 50%;
-    filter: drop-shadow(0 0 10px #d43322);
-    animation: particleUp 2s ease-out 0;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
-  }
+    .right {
+      @include width-height($width: 100%, $height: 100%);
+      position: absolute;
+      animation: shake 2s ease-out 0;
+      animation-iteration-count: infinite;
+      animation-fill-mode: both;
+    }
   
-  .fire-right {
-    @include width-height($width: 100%, $height: 100%);
-    position: absolute;
-    animation: shake 2s ease-out 0;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
-  }
+    .right .main_fire {
+      position: absolute;
+      top: 15%;
+      right: -25%;
+      width: 80%;
+      height: 80%;
+      background-color: #ef5a00;
+      transform: scaleX(0.8) rotate(45deg);
+      border-radius: 0 40% 60% 40%;
+      filter: drop-shadow(0 0 10px #d43322);
+    }
   
-  .fire-right .main-fire {
-    position: absolute;
-    top: 15%;
-    right: -25%;
-    width: 80%;
-    height: 80%;
-    background-color: #ef5a00;
-    transform: scaleX(0.8) rotate(45deg);
-    border-radius: 0 40% 60% 40%;
-    filter: drop-shadow(0 0 10px #d43322);
-  }
+    .right .particle_fire {
+      @include width-height($width: 15px, $height: 15px);
+      position: absolute;
+      top: 45%;
+      left: 50%;
+      background-color: #ef5a00;
+      transform: scaleX(0.8) rotate(45deg);
+      border-radius: 50%;
+      filter: drop-shadow(0 0 10px #d43322);
+      animation: particleUp 2s ease-out 0;
+      animation-iteration-count: infinite;
+      animation-fill-mode: both;
+    }
   
-  .fire-right .particle-fire {
-    @include width-height($width: 15px, $height: 15px);
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    background-color: #ef5a00;
-    transform: scaleX(0.8) rotate(45deg);
-    border-radius: 50%;
-    filter: drop-shadow(0 0 10px #d43322);
-    animation: particleUp 2s ease-out 0;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
-  }
+    .left {
+      @include width-height($width: 100%, $height: 100%);
+      position: absolute;
+      animation: shake 3s ease-out 0;
+      animation-iteration-count: infinite;
+      animation-fill-mode: both;
+    }
   
-  .fire-left {
-    @include width-height($width: 100%, $height: 100%);
-    position: absolute;
-    animation: shake 3s ease-out 0;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
-  }
+    .left .main_fire {
+      @include width-height($width: 80%, $height: 80%);
+      position: absolute;
+      top: 15%;
+      left: -20%;
+      background-color: #ef5a00;
+      transform: scaleX(0.8) rotate(45deg);
+      border-radius: 0 40% 60% 40%;
+      filter: drop-shadow(0 0 10px #d43322);
+    }
   
-  .fire-left .main-fire {
-    @include width-height($width: 80%, $height: 80%);
-    position: absolute;
-    top: 15%;
-    left: -20%;
-    background-color: #ef5a00;
-    transform: scaleX(0.8) rotate(45deg);
-    border-radius: 0 40% 60% 40%;
-    filter: drop-shadow(0 0 10px #d43322);
-  }
+    .left .particle_fire {
+      @include width-height($width: 10%, $height: 10%);
+      position: absolute;
+      top: 10%;
+      left: 20%;
+      background-color: #ef5a00;
+      border-radius: 50%;
+      filter: drop-shadow(0 0 10px #d43322);
+      animation: particleUp 3s infinite ease-out 0;
+      animation-fill-mode: both;
+    }
   
-  .fire-left .particle-fire {
-    @include width-height($width: 10%, $height: 10%);
-    position: absolute;
-    top: 10%;
-    left: 20%;
-    background-color: #ef5a00;
-    border-radius: 50%;
-    filter: drop-shadow(0 0 10px #d43322);
-    animation: particleUp 3s infinite ease-out 0;
-    animation-fill-mode: both;
+    .bottom .main_fire {
+      @include width-height($width: 75%, $height: 75%);
+      position: absolute;
+      top: 30%;
+      left: 20%;
+      background-color: #ff7800;
+      transform: scaleX(0.8) rotate(45deg);
+      border-radius: 0 40% 100% 40%;
+      filter: blur(10px);
+      animation: glow 2s ease-out 0;
+      animation-iteration-count: infinite;
+      animation-fill-mode: both;
+    }
   }
-  
-  .fire-bottom .main-fire {
-    @include width-height($width: 75%, $height: 75%);
+
+  .logs {
     position: absolute;
-    top: 30%;
-    left: 20%;
-    background-color: #ff7800;
-    transform: scaleX(0.8) rotate(45deg);
-    border-radius: 0 40% 100% 40%;
-    filter: blur(10px);
-    animation: glow 2s ease-out 0;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
+    top: calc(100vh - 25%);
+    left: calc(100vw - 30%);
+    z-index: 0;
+
+    .log {
+      @include width-height($width: 21px, $height: 120px);
+      background: $log;
+      position: absolute;
+      bottom: 0;
+      border-radius: 10px;
+      transform-origin: bottom center;
+      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
+
+      &:after {
+        @include width-height($width: 100%, $height: 20px);
+        content: "";
+        display: block;
+        background: #ff915b;
+        border-radius: 20px;
+        transform-origin: top center;
+        transform: scale(1, 0.5);
+      }
+
+      &:nth-of-type(1) {
+        left: 60px;
+        transform: rotateZ(45deg);
+      }
+      &:nth-of-type(2) {
+        left: 110px;
+        transform: rotateZ(25deg);
+      }
+      &:nth-of-type(3) {
+        left: 150px;
+        transform: rotateZ(-5deg);
+      }
+      &:nth-of-type(4) {
+        left: 210px;
+        transform: rotateZ(-55deg);
+      }
+      &:nth-of-type(5) {
+        left: 190px;
+        transform: rotateZ(-35deg);
+      }
+      &:nth-of-type(6) {
+        left: 240px;
+        transform: rotateZ(-45deg);
+      }
+    }
   }
+}
