--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,10 +18,9 @@ $nightBlue: #031e25;
 $fireBright: #ff7800;
 $fireMedium: #f36200;
 $fireDark: #d63603;
-$log: linear-gradient(#e66465, #5d5e55);
-
-$wood: #781e20;
-$light-wood: #b35050;
+$fireShadow: #d43322;
+$fireEmber: #ef5a00;
+$log: linear-gradient(#e66465, $darkOliveGreen);
 
 // font families
 $heading: "Montserrat", sans-serif;
