--- a/src/styles/components/animations/campfire.scss
+++ b/src/styles/components/animations/campfire.scss
@@ -1,5 +1,13 @@
 @import "../../imports";
 
+@mixin fireGlow {
+  box-shadow: 
+  0 0 90px 50px rgba(255, 208, 0, 0.8),
+  0 0 120px 70px rgba(255, 136, 0, 0.9),
+  0 0 160px 100px rgb(185, 99, 0.4);
+  opacity: 0.8;
+}
+
 @keyframes scaleUpDown {
   0%,
   100% {
@@ -47,132 +55,147 @@
 @keyframes glow {
   0%,
   100% {
-    background-color: #ef5a00;
+    background-color: $fireEmber;
   }
   50% {
-    background-color: #ff7800;
+    background-color: $fireBright;
   }
 }
 .campfire {
   .fire {
     @include width-height($width: 10vw, $height: 10vw);
     position: absolute;
-    top: calc(100vh - 45%);
-    left: calc(100vw - 24.5%);
+    top: calc(100vh - 50%);
+    left: calc(100vw - 30%);
     background-color: transparent;
     margin-left: auto;
     margin-right: auto;
     z-index: 2;
 
-    .main {
-      @include width-height($width: 100%, $height: 100%);
+    * {
       position: absolute;
+    }
+
+    .main,
+    .main .main_fire,
+    .right,
+    .left {
+      @include width-height($width: 115%, $height: 115%);
+    }
+
+    .right .main_fire,
+    .left .main_fire {
+      @include width-height($width: 100%, $height: 100%);
+      top: 20%;
+    }
+
+    .main_fire,
+    .particle_fire {
+      @include mask-image(
+        -webkit-gradient(linear, left top, left bottom, from(rgb(255, 120, 0)), to(rgba(212, 51, 34, 0.6)))
+      );
+      @include filter(drop-shadow(0 0 10px $fireShadow));
+
+      .glow {
+        
+      }
+    }
+
+    .main {
       animation: scaleUpDown 3s ease-out;
       animation-iteration-count: infinite;
       animation-fill-mode: both;
+
+      .main_fire {
+        background-image: radial-gradient(
+          farthest-corner at 10px 0,
+          $fireShadow 0%,
+          $fireEmber 95%
+        );
+        transform: scaleX(0.8) rotate(45deg);
+        border-radius: 0 40% 60% 40%;
+      }
+
+      .particle_fire {
+        @include width-height($width: 10px, $height: 10px);
+        top: 60%;
+        left: 45%;
+        background-color: $fireEmber;
+        border-radius: 50%;
+        animation: particleUp 2s ease-out 0;
+        animation-iteration-count: infinite;
+        animation-fill-mode: both;
+      }
     }
-  
-    .main .main_fire {
-      @include width-height($width: 100%, $height: 100%);
-      position: absolute;
-      background-image: radial-gradient(
-        farthest-corner at 10px 0,
-        #d43300 0%,
-        #ef5a00 95%
-      );
-      transform: scaleX(0.8) rotate(45deg);
-      border-radius: 0 40% 60% 40%;
-      filter: drop-shadow(0 0 10px #d43322);
-    }
-  
-    .main .particle_fire {
-      @include width-height($width: 10px, $height: 10px);
-      position: absolute;
-      top: 60%;
-      left: 45%;
-      background-color: #ef5a00;
-      border-radius: 50%;
-      filter: drop-shadow(0 0 10px #d43322);
-      animation: particleUp 2s ease-out 0;
-      animation-iteration-count: infinite;
-      animation-fill-mode: both;
-    }
-  
+
     .right {
-      @include width-height($width: 100%, $height: 100%);
-      position: absolute;
       animation: shake 2s ease-out 0;
       animation-iteration-count: infinite;
       animation-fill-mode: both;
+
+      .main_fire {
+        right: -45%;
+        background-color: $fireEmber;
+        transform: scaleX(0.7) rotate(45deg);
+        border-radius: 0 40% 60% 40%;
+      }
+
+      .particle_fire {
+        @include width-height($width: 15px, $height: 15px);
+        top: 45%;
+        left: 50%;
+        background-color: $fireEmber;
+        transform: scaleX(0.8) rotate(45deg);
+        border-radius: 50%;
+        animation: particleUp 2s ease-out 0;
+        animation-iteration-count: infinite;
+        animation-fill-mode: both;
+      }
     }
-  
-    .right .main_fire {
-      position: absolute;
-      top: 15%;
-      right: -25%;
-      width: 80%;
-      height: 80%;
-      background-color: #ef5a00;
-      transform: scaleX(0.8) rotate(45deg);
-      border-radius: 0 40% 60% 40%;
-      filter: drop-shadow(0 0 10px #d43322);
-    }
-  
-    .right .particle_fire {
-      @include width-height($width: 15px, $height: 15px);
-      position: absolute;
-      top: 45%;
-      left: 50%;
-      background-color: #ef5a00;
-      transform: scaleX(0.8) rotate(45deg);
-      border-radius: 50%;
-      filter: drop-shadow(0 0 10px #d43322);
-      animation: particleUp 2s ease-out 0;
-      animation-iteration-count: infinite;
-      animation-fill-mode: both;
-    }
-  
+
     .left {
-      @include width-height($width: 100%, $height: 100%);
-      position: absolute;
       animation: shake 3s ease-out 0;
       animation-iteration-count: infinite;
       animation-fill-mode: both;
+
+      .main_fire {
+        left: -30%;
+        background-color: $fireEmber;
+        transform: scaleX(0.7) rotate(45deg);
+        border-radius: 0 40% 60% 40%;
+      }
+
+      .particle_fire {
+        @include width-height($width: 10%, $height: 10%);
+        top: 10%;
+        left: 20%;
+        background-color: $fireEmber;
+        border-radius: 50%;
+        animation: particleUp 3s infinite ease-out 0;
+        animation-iteration-count: infinite;
+        animation-fill-mode: both;
+      }
     }
-  
-    .left .main_fire {
-      @include width-height($width: 80%, $height: 80%);
-      position: absolute;
-      top: 15%;
-      left: -20%;
-      background-color: #ef5a00;
-      transform: scaleX(0.8) rotate(45deg);
-      border-radius: 0 40% 60% 40%;
-      filter: drop-shadow(0 0 10px #d43322);
-    }
-  
-    .left .particle_fire {
-      @include width-height($width: 10%, $height: 10%);
-      position: absolute;
-      top: 10%;
-      left: 20%;
-      background-color: #ef5a00;
-      border-radius: 50%;
-      filter: drop-shadow(0 0 10px #d43322);
-      animation: particleUp 3s infinite ease-out 0;
-      animation-fill-mode: both;
-    }
-  
+
     .bottom .main_fire {
       @include width-height($width: 75%, $height: 75%);
-      position: absolute;
       top: 30%;
       left: 20%;
-      background-color: #ff7800;
+      background-color: $fireBright;
       transform: scaleX(0.8) rotate(45deg);
       border-radius: 0 40% 100% 40%;
       filter: blur(10px);
       animation: glow 2s ease-out 0;
+    }
+
+    .glow {
+      @include width-height($width: 30%, $height: 0%);
+      @include fireGlow();
+      margin-left: 50%;
+      margin-top: 30%;
+      z-index: 0;
+      transform: scaleX(0.8) rotate(45deg);
+      animation: scaleUpDown 3s ease-out;
       animation-iteration-count: infinite;
       animation-fill-mode: both;
     }
@@ -180,8 +203,9 @@
 
   .logs {
     position: absolute;
+    @include transform(scale(1.5));
     top: calc(100vh - 25%);
-    left: calc(100vw - 30%);
+    left: calc(100vw - 40%);
     z-index: 0;
 
     .log {
@@ -224,7 +248,11 @@
         transform: rotateZ(-35deg);
       }
       &:nth-of-type(6) {
-        left: 240px;
+        left: 220px;
+        transform: rotateZ(-45deg);
+      }
+      &:nth-of-type(7) {
+        left: 250px;
         transform: rotateZ(-45deg);
       }
     }
