--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,55 +1,89 @@
 @import "../imports";
 
 nav {
-    position: absolute;
-    top: 1rem;
-    right: 0;
+  display: block;
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  z-index: 10;
 
-    .navigation {
-        @include flex(row);
-        position: fixed;
-        left: 0;
-        margin-left: 2vw;
-    
-        .nav_button {
-            @include width-height(28px, 28px);
-            @include transition;
-            @include transform(scale(1));
-            @include box-shadow;
-            border: 1px solid $offBlack;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 100%;
-            margin: 0 4px;
+  .navigation {
+    .nav_button {
+      @include width-height($width: 3rem, $height: 3.5rem);
+      position: relative;
+      @include transform(rotate(0deg));
+      @include transition($time-in: 0.5s);
+      cursor: pointer;
 
-            &:hover {
-                @include transform(scale(1.2));
-                @include box-shadow($color: $moonSilver);
-                margin: 0 6px;
-            }
+      span {
+        @include width-height($width: 50%, $height: 0.25rem);
+        display: block;
+        position: absolute;
+        background-color: $peru;
+        opacity: 1;
+        @include transform(rotate(0deg));
+        @include transition($time-in: 0.25s);
 
-            a {
-                @include width-height($height: 85%);
-                > i {
-                    @include font($color: $offBlack, $size: 15px);
-                }
-            } 
-    
-            &.home {
-                background-color: $peru;
-            }
-            &.about {
-                background-color: $maroon;
-    
-            }
-            &.portfolio {
-                background-color: $lightGreen;
-    
-            }
-            &.contact {
-                background-color: $darkOliveGreen;
-            }
+        &:nth-child(even) {
+          left: 50%;
+          border-radius: 0 0.25rem 0.25rem 0;
         }
+
+        &:nth-child(odd) {
+          left: 0;
+          border-radius: 0.25rem 0 0 0.25rem;
+        }
+
+        &:nth-child(1),
+        &:nth-child(2) {
+          top: 0;
+        }
+        &:nth-child(3),
+        &:nth-child(4) {
+          top: 0.7rem;
+        }
+        &:nth-child(5),
+        &:nth-child(6) {
+          top: 1.4rem;
+        }
+      }
+
+      &.true {
+        span {
+          &:nth-child(1),
+          &:nth-child(6) {
+            @include transform(rotate(45deg));
+          }
+          &:nth-child(2),
+          &:nth-child(5) {
+            @include transform(rotate(-45deg));
+          }
+          &:nth-child(1) {
+            left: 5px;
+            top: 7px;
+          }
+          &:nth-child(2) {
+            left: calc(50% - 5px);
+            top: 7px;
+          }
+          &:nth-child(3) {
+            left: -50%;
+            opacity: 0;
+          }
+          &:nth-child(4) {
+            left: 100%;
+            opacity: 0;
+          }
+          &:nth-child(5) {
+            left: 5px;
+            top: 22px;
+          }
+          &:nth-child(6) {
+            left: calc(50% - 5px);
+            opacity: 29px;
+          }
+        }
+      }
     }
+  }
 }
