--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,10 @@ $fireShadow: #d43322;
 $fireEmber: #ef5a00;
 $log: linear-gradient(#e66465, $darkOliveGreen);
 
+// rock colors
+$rockDark: #2f484f;
+$rockLight: #917472;
+
 // font families
 $heading: "Montserrat", sans-serif;
 $body: "UniversLT57CondensedRegular", sans-serif;
