--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -49,6 +49,7 @@
   }
 }
 
+// media queries
 @mixin media($size, $up: false, $down: false) {
   @if $up {
     @media screen and (min-width: $size) {
