--- a/src/styles/components/animations/campfire.scss
+++ b/src/styles/components/animations/campfire.scss
@@ -65,8 +65,8 @@
   .fire {
     @include width-height($width: 140px, $height: 140px);
     position: absolute;
-    top: 45%;
-    right: 260px;
+    top: 65%;
+    right: 230px;
     background-color: transparent;
     margin-left: auto;
     margin-right: auto;
@@ -200,8 +200,8 @@
   .logs {
     position: absolute;
     @include transform(scale(1.5));
-    top: 75%;
-    right: 550px;
+    top: 95%;
+    right: 520px;
     z-index: 0;
 
     .log {
@@ -250,6 +250,48 @@
       &:nth-of-type(7) {
         left: 250px;
         transform: rotateZ(-45deg);
+      }
+    }
+  }
+
+  .rocks {
+    position: absolute;
+    top: 65%;
+    right: 230px;
+
+    .rock_big_1, .rock_big_2, .rock_big_3, .rock_big_4, .rock_big_5 {
+      @include box-shadow($inset: true);
+      position: absolute;
+      z-index: 3;
+      top: 180px;
+      background-image: radial-gradient(circle at bottom right, $rockLight, $rockDark);
+      border-radius: 95px 95px 0 0;
+    }
+
+    .rock_big {
+      &_1 {
+        @include width-height($width: 95px, $height: 56px);
+        right: -140px;
+      }
+      &_2 {
+        @include width-height($width: 80px, $height: 45px);
+        top: 190px;
+        right: -65px;
+      }
+      &_3 {
+        @include width-height($width: 85px, $height: 58px);
+        top: 176px;
+        right: 10px;
+      }
+      &_4 {
+        @include width-height($width: 70px, $height: 48px);
+        top: 185px;
+        right: 80px;
+      }
+      &_5 {
+        @include width-height($width: 90px, $height: 54px);
+        top: 179px;
+        right: 145px;
       }
     }
   }
