--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -15,6 +15,10 @@ nav {
       @include transition($time-in: 0.5s);
       cursor: pointer;
 
+      &:hover span {
+        @include hoverBrighten();
+      }
+
       span {
         @include width-height($width: 50%, $height: 0.25rem);
         display: block;
@@ -81,6 +85,42 @@ nav {
           &:nth-child(6) {
             left: calc(50% - 5px);
             opacity: 29px;
+          }
+        }
+      }
+    }
+
+    .nav_menu {
+      @include flex($direction: row);
+      @include transition($time-in: 0.25s, $time-out: 0.25s);
+      position: absolute;
+      top: 0;
+      left: 4rem;
+      opacity: 0;
+    }
+
+    &.true .nav_menu {
+      opacity: 1;
+
+      .link_button:hover {
+        a:before {
+          left: 12px;
+        }
+
+        &:nth-child(1),
+        &:nth-child(2) {
+          a:before {
+            @include width-height($width: 60px, $height: 2px);
+          }
+        }
+        &:nth-child(3) {
+          a:before {
+            @include width-height($width: 50px, $height: 2px);
+          }
+        }
+        &:nth-child(4) {
+          a:before {
+            @include width-height($width: 75px, $height: 2px);
           }
         }
       }
