--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 @import "./styles/components/navigation.scss";
 
 @import "./styles/components/animations/campfire.scss";
+@import "./styles/components/animations/ocean.scss";
 
 // globals
 h1 {
