--- a/src/styles/components/wrapper.scss
+++ b/src/styles/components/wrapper.scss
@@ -11,4 +11,9 @@
         background-image: url("../../assets/treeline.svg");
         background-size: cover;
     }
+
+    &.background_2 {
+        background:radial-gradient(ellipse at center, rgba(255,254,234,1) 0%, rgba(255,254,234,1) 35%, #B7E8EB 100%);
+        background: #015871;
+    }
 }
