--- a/src/styles/components/animations/campfire.scss
+++ b/src/styles/components/animations/campfire.scss
@@ -87,17 +87,6 @@
   }
 }
 
-@keyframes rockGlow {
-  0%, 100% {
-    background-color: radial-gradient(to bottom, #ef5a00, #d43322);
-    opacity: 0.4;
-  }
-  50% {
-    background-color: radial-gradient(to bottom, #ef5a00, #d43322);
-    opacity: 0.8;
-  }
-}
-
 @keyframes dash {
   from {
     stroke-dashoffset: 0;
@@ -112,8 +101,8 @@
     @include width-height(630px, 400px);
     transform: skewX(5deg) scale(0.9);
     position: absolute;
-    bottom: 40%;
-    right: 1%;
+    bottom: 30%;
+    right: -20%;
     -webkit-mask-image: linear-gradient(to top, rgb(255, 255, 255) 30%, rgba(112, 112, 112, 0));
     mask-image: linear-gradient(to top, rgb(255, 255, 255) 30%, rgba(112, 112, 112, 0));
     -webkit-mask-size: 100% 100%;
@@ -174,12 +163,12 @@
   .fire {
     @include width-height($width: 140px, $height: 140px);
     position: absolute;
-    top: 50%;
-    right: 500px;
+    top: 58%;
+    right: 19%;
     background-color: transparent;
     margin-left: auto;
     margin-right: auto;
-    z-index: 2;
+    z-index: 3;
 
     * {
       position: absolute;
@@ -309,9 +298,9 @@
   .logs {
     position: absolute;
     @include transform(scale(1.5));
-    top: 77%;
-    right: 795px;
-    z-index: 0;
+    top: 91%;
+    right: 43%;
+    z-index: 2;
 
     .log {
       @include width-height($width: 21px, $height: 120px);
@@ -365,8 +354,8 @@
 
   .rocks {
     position: absolute;
-    top: 52%;
-    right: 500px;
+    top: 60%;
+    right: 19%;
 
     .rock_big_1, .rock_big_2, .rock_big_3, .rock_big_4, .rock_big_5 {
       position: absolute;
@@ -406,7 +395,7 @@
       &_2:before {
         @include width-height($width: 74px, $height: 18px);
         @include transform(skewX(60deg));
-        margin-top: 46px;
+        margin-top: 45px;
         left: 21px;
     }
     &_3:before {
@@ -417,7 +406,7 @@
     &_4:before {
       @include width-height($width: 75px, $height: 18px);
       @include transform(skewX(-35deg));
-      margin-top: 49px;
+      margin-top: 47px;
       left: -9px;
     }
     &_5:before {
@@ -452,5 +441,12 @@
         right: 145px;
       }
     }
+  }
+
+  .ground {
+    @include width-height(100%, 15%);
+    position: absolute;
+    z-index: 1;
+    bottom: 20%;
   }
 }
