--- a/src/styles/components/wrapper.scss
+++ b/src/styles/components/wrapper.scss
@@ -7,10 +7,24 @@
     position: fixed;
     background-color: #010b12;
 
+    // main page    
     .wrapper.background_1 {
         @include width-height($width: 100%, $height: 100%);
         background-image: url("../../assets/treeline.svg");
         background-size: cover;
         z-index: 1;
+    }
+    // work page
+    &.background_3 {
+        .work_container {
+            @include flex(row);
+
+            .cards_work {
+                @include flex(column);
+                @include width-height(100%, 100%);
+                justify-content: center;
+                align-items: center;
+            }
+        }
     }
 }
