--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -23,9 +23,9 @@
     &_work {
         &__hero {
             @include font($color: $moonSilver, $weight: 800, $align: left);
-            width: calc(100vw - 60%);
-            margin-left: 10vw;
-            margin-top: -6vh;
+            margin-bottom: 1rem;
+            margin-left: 10%;
+            margin-top: -5rem;
 
             h1 {
                 text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
