--- a/src/styles/components/wrapper.scss
+++ b/src/styles/components/wrapper.scss
@@ -16,6 +16,17 @@
     }
     // work page
     &.background_3 {
+        .moon {
+            @include width-height(300px, 300px);
+            background-image: url("../../assets/moon-full.svg");
+            background-repeat: no-repeat;
+            position: absolute;
+            top: -125px;
+            left: -75px;
+            z-index: -1;
+            filter: drop-shadow(3px 3px 2px rgba(255, 255, 255, 0.7));
+        }
+
         .work_container {
             @include flex(column);
             margin: 1rem;
