some animations for work page

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -24,7 +24,7 @@
         &__hero {
             @include font($color: $moonSilver, $weight: 800, $align: left);
             margin-bottom: 1rem;
-            margin-left: 10%;
+            margin-left: 250px;
             margin-top: -5rem;
 
             h1 {
