--- a/src/styles/components/Cards/contentcard.scss
+++ b/src/styles/components/Cards/contentcard.scss
@@ -3,6 +3,8 @@
 .card {
     @include box-shadow(0px, 8px, 16px, rgba(0, 0, 0, 0.6));
     @include width-height(400px, 110px);
+    @include transition;
+    @include transform(scale(100%));
     backdrop-filter: blur(3px) brightness(130%); 
     padding: 2rem 1.75rem;
     margin: 1rem;
@@ -19,5 +21,10 @@
 
     .card_buttons {
         margin-left: -1rem;
+    }
+
+    &:hover {
+        @include transform(scale(105%));
+        backdrop-filter: blur(3px) brightness(150%);
     }
 }
