work on about page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $offBlack: #181A18;
 // color pallete
 $peru: #da9e6e;
 $maroon: #7c1414;
+$maroonDark: #520e0e;
 $moonSilver: #bdd6be;
 $lightGreen: #aee298;
 $dimGray: #678060;
