--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -7,7 +7,8 @@
   $tracking: null,
   $family: null,
   $align: null,
-  $decoration: null
+  $decoration: null,
+  $transform: null
 ) {
   font-size: $size;
   color: $color;
@@ -17,6 +18,7 @@
   font-family: $family;
   text-align: $align;
   text-decoration: $decoration;
+  text-transform: $transform;
 }
 
 // div sizing
@@ -67,12 +69,14 @@
   $borderWidth: null,
   $borderStyle: null,
   $borderColor: null,
+  $borderRadius: null,
   $noBorder: false,
   $noOutline: false
 ) {
   border-width: $borderWidth;
   border-style: $borderStyle;
   border-color: $borderColor;
+  border-radius: $borderRadius;
 
   @if $noBorder {
     border: none;
