--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -138,10 +138,12 @@ nav {
       backdrop-filter: blur(6px) brightness(130%); 
       margin-top: -5px;
       padding: 5px 10px;
+      border-radius: 4px;
   
       &::before {
         margin-top: 2.4rem;
         margin-left: 4px;
+        border-radius: 0px 0px 4px 4px;
       }
     }
     &:nth-child(1) a:before,
