--- a/src/styles/components/subtitle.scss
+++ b/src/styles/components/subtitle.scss
@@ -5,6 +5,10 @@
         @include font($size: 18px, $color: $peru, $weight: 100);
         text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
     }
+    &.about {
+        @include font($size: 18px, $color: $peru, $weight: 100);
+        text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);  
+    }
     &.work {
         @include font($size: 18px, $color: $moonSilver, $weight: 100);
         text-shadow: 4px 4px 16px rgba(0, 0, 0, 0.4);
